This file documents the major additions and syntax changes between releases.

1.6 ...
	FIXES
	Don't let e.g. check_http's -C option reset SSL version if e.g. -S 1 -C 5 is specified

	WARNINGS
	check_procs now ignores its parent process to avoid unexpected results when invoked via certain shells
	utils.sh no longer defines ECHO

1.5 2nd October 2013
	ENHANCEMENTS
	New check_dbi plugin for checking an (SQL) database using DBI
	Let OpenSSL load its configuration file (see the OPENSSL_config(3) man page)
	Add performance data to check_apt
	Add performance data to check_procs
	Added -4/-6 options to check_dig (Ville Mattila)
	New check_oracle --connect option to perform real login
	New check_nagios -t option to override the default timeout
	New check_disk -f/--freespace-ignore-reserved option to ignore space reserved for root
	New check_disk -N/--include-type option to limit the filesystem types to check
	Allow for building the plugins in parallel
	Add --without-{dbi,ldap,radius} options to ./configure
	Made Verbose output of check_sensors compliant (Gabriele Tozzi)
	New switch -E/--extended-perfdata for check_http to print additional performance data (Sebastian Nohn)
	New check_http -d option to specify a string to expect within the response headers
	New check_http -J/-K options for client certificate authentication support
	Add support for executing queries to check_pgsql
	Let check_pgsql accept a UNIX socket directory as hostname
	New check_pgsql -o option to specify additional connection parameters
	New check_fping -S option to specify the source IP address
	New check_fping -I option to specify the interface to bind to
	Let check_fping support IPv6
	New check_procs -k option to ignore kernel threads (on Linux)
	Let check_procs use /proc/<PID>/exe (if available) instead of getpid(2), unless -T is specified
	Let check_mysql support SSL
	Let check_mysql add perfromance metrics for all checks
	New check_mysql -f option to specify a client options file