@@ -1,12 +1,17 @@
 This file documents the major additions and syntax changes between releases.
 
 1.6 ...
+	ENHANCEMENTS
+	check_ide_smart now defaults to plugin output, original output appended with -v
+
 	FIXES
 	Don't let e.g. check_http's -C option reset SSL version if e.g. -S 1 -C 5 is specified
 
 	WARNINGS
 	check_procs now ignores its parent process to avoid unexpected results when invoked via certain shells
 	utils.sh no longer defines ECHO
+	check_ide_smart -q (quiet) and -n (Nagios-compatile output) are now deprecated
+	  but accepted for backward-compatibility
 
 1.5 2nd October 2013
 	ENHANCEMENTS
